change type attributes from item to user
